--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,110 @@ body {
   background-color: #f5cd15 !important;
 }
 
-.BR{
-  border-radius: 1px solid #f5cd15;
+.BR {
+  border: 1px solid #f5cd15 !important;
+}
+
+#card-icon {
+  margin-top: -18px;
+}
+
+#main {
+  background-color: #f5cd15;
+  width: 100vw;
+  height: 100vh;
+}
+
+#container {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+}
+
+#container2 {
+  /* background-color: red; */
+  width: 65%;
+  height: 70%;
+  margin-top: 80px;
+  margin-left: 195px;
+}
+
+#progress {
+  /* background-color: red; */
+  width: 140%;
+  height: 75%;
+  padding-left: 1rem;
+}
+
+#progress2 {
+  margin-left: 145px;
+}
+
+#progress-text {
+}
+
+#notes {
+  width: 230px; /* Set the width of the container */
+  height: 100px; /* Set the height of the container */
+  overflow: auto; /* Add scrollbars if content overflows */
+}
+
+#notes .text-sm {
+  white-space: pre-wrap; /* Allow wrapping of long lines */
+}
+
+/* Customize scrollbar */
+#notes::-webkit-scrollbar {
+  width: 0px; /* Set the width of the scrollbar */
+}
+
+/* Track */
+#notes::-webkit-scrollbar-track {
+  /* background: #f1f1f1; */
+  border-radius: 50%; /* Set the background color of the scrollbar track */
+}
+
+/* Handle */
+#notes::-webkit-scrollbar-thumb {
+  background: #888; /* Set the color of the scrollbar handle */
+  border-radius: 4px; /* Set border radius */
+}
+
+/* Handle on hover */
+#notes::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Change color on hover */
+}
+
+/* Adjust width of cards to fit within container */
+.Card {
+  width: calc(
+    33.33% - 10px
+  ); /* Adjust the width as needed based on your grid layout and gap */
+  /* Add any other necessary styles */
+}
+
+#profile {
+  /* background-color: red; */
+  width: 200px;
+  display: inline-flex;
+  gap: 14px;
+}
+
+#ceo {
+  position: absolute;
+  top: 45px;
+  right: 100px;
+}
+
+#ceo-owner {
+  margin-top: 5px;
+}
+
+.header2 {
+  position: absolute;
+  right: 200px;
+  top: -10px;
 }
 
 /*
@@ -69,15 +171,17 @@ body {
   color: white;
   border-radius: 1rem;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
-  border: 1px solid #f5cd15;
+  border: none;
   line-height: 1.15rem;
-  height: auto; /* Allow height to adjust based on content */
+  width: 300px; /* Set width to 300px */
+  height: 170px; /* Set height to 180px */
+  overflow: hidden; /* Hide any overflow content */
 }
 
 /* Adjust styles for tile size */
 .react-calendar__tile {
   width: calc(100% / 7); /* Ensure each tile takes up equal space */
-  height: 28px; /* Adjust height as needed */
+  height: 20px; /* Adjust height as needed */
   line-height: 5px; /* Center content vertically */
   color: #ffffff;
   font-weight: 500;
