--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   background-color: rgba(255, 255, 255, 30%);
 }
 
-.nav-bar{
+.nav-bar {
   background-color: black;
 }
 
@@ -167,6 +167,24 @@ body {
     rgba(255, 255, 255, 0.2)
   );
   backdrop-filter: blur(4px);
+}
+
+.gradient-color {
+  /* Linear gradient */
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.3) 0%,
+    rgba(32, 31, 33, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
+
+  /* For full browser support */
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.3) 0%,
+    rgba(32, 31, 33, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
 }
 
 /*! Calender CSS Starts*/
@@ -345,6 +363,60 @@ abbr[title] {
   height: 7%;
 }
 
+#searchbox2 {
+  position: absolute;
+  left: 49rem;
+  width: 25%;
+  height: 7%;
+}
+
+#searchbox3 {
+  position: absolute;
+  left: 20rem;
+  width: 25%;
+  height: 7%;
+}
+
+.abcd {
+  width: 200%;
+}
+
+#serve-btn {
+  position: absolute;
+  left: 55rem;
+}
+
+.serve-card {
+  width: 100%;
+}
+
+.card-item3 {
+  width: 470px;
+  height: 350px;
+}
+
+#para {
+  margin-left: 20px;
+}
+
+.dashbord {
+  background: red !important;
+  width: 10%;
+}
+
+.navbg {
+  background-color: rgb(244, 0, 0);
+  color: white;
+  width: 250px;
+  padding: 15px;
+  padding-left: 30px;
+  margin-left: 0px;
+  padding-bottom: 5px;
+  border-radius: 50px 0px 0px 50px;
+  /* border-radius: 13em/3em; */
+  /* border-radius: 13em/3em; */
+}
+
 .input-field {
   border: none;
   padding: 12px;
@@ -377,6 +449,19 @@ abbr[title] {
     rgba(255, 255, 255, 0.2)
   );
   backdrop-filter: blur(5px);
+}
+
+.input-field2 {
+  border: none;
+  padding: 12px;
+  padding-left: 45px;
+  background-color: gray;
+}
+
+::placeholder {
+  color: white;
+  font-family: sans-serif;
+  font-size: 15px;
 }
 
 .child2 input:-ms-input-placeholder {
